--- a/final_exam.html
+++ b/final_exam.html
@@ -17,6 +17,13 @@
             font:Helvetica;
 
         }
+        .Orange{
+            background-color: red;
+        }
+
+        .broccoli{
+            background-color: yellow;
+        }
     </style>
 </head>
 
@@ -29,6 +36,8 @@
     <p>orange，orange，orange，orange，orange，orange</p>
     <br>
     <p>orange，orange，orange，orange，orange，orange</p> 
+    <img class="Orange" src="image/orange.png">
     <img class="broccoli" src="image/broccoli.png">
+    
 </body>
 </html>
